--- a/css/style.css
+++ b/css/style.css
@@ -9,440 +9,534 @@ h5,
 h6,
 p,
 a{
-    font-family: century-gothic, sans-serif;
+  font-family: century-gothic, sans-serif;
   font-style: normal;
 }
 
-header{
-    position: relative;
-    z-index: 9999;
+.pre-loader {
+  position: fixed;
+  z-index: 99999; /** make sure this is the highest value compared to all other divs **/
+  top: 0;
+  left: 0;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.pre-loader.hidden {
+  animation: fadeOut 2s; /** change to 1s */
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+  100% {
+      opacity: 0;
+      visibility: hidden;
+  }
 }
 
 .modal.fade .modal-content {
-    opacity: 0;
-    visibility: hidden;
-    transform: scale(1.1);
+  opacity: 0;
+  visibility: hidden;
+  transform: scale(1.1);
 }
 .modal.show .modal-content{
-    opacity: 1;
-    visibility: visible;
-    transform: scale(1);
+  opacity: 1;
+  visibility: visible;
+  transform: scale(1);
 }
 
 .modal-content {
-    transform: scale(1.1);
-    transition: visibility 0.25s ease-out, opacity 0.25s ease-out,
-    transform 0.25s ease-out;
+  transform: scale(1.1);
+  transition: visibility 0.25s ease-out, opacity 0.25s ease-out,
+  transform 0.25s ease-out;
 }
 
 /** Modal static */
 
 .modal.modal-static .modal-content {
-    transform: scale(1.02);
+  transform: scale(1.02);
 }
 
 .bg-neutral-51 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(51 51 51 / var(--tw-bg-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 51 51 / var(--tw-bg-opacity));
 }
 
 .bg-neutral-52 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(55 55 55 / var(--tw-bg-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 55 55 / var(--tw-bg-opacity));
 }
 
 .bg-main{
-    --tw-bg-opacity: 1;
-    background-color: rgb(0 63 145 / var(--tw-bg-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 63 145 / var(--tw-bg-opacity));
 }
 .bg-main:hover{
-    --tw-bg-opacity: 1;
-    background-color: rgb(1 40 100 / var(--tw-bg-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(1 40 100 / var(--tw-bg-opacity));
 }
 
 .bg-main-2{
-    --tw-bg-opacity: 1;
-    background-color: rgb(19 25 33 / var(--tw-bg-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(19 25 33 / var(--tw-bg-opacity));
 }
 .bg-main-2:hover{
-    --tw-bg-opacity: 1;
-    background-color: rgb(13 19 28 / var(--tw-bg-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(13 19 28 / var(--tw-bg-opacity));
 }
 
 .bg-main-3{
-    background-color: #212844;
+  background-color: #212844;
 }
 
 .border-color-main {
-    --tw-border-opacity: 1;
-    border-color: rgb(0 63 145 / var(--tw-bg-opacity));
+  --tw-border-opacity: 1;
+  border-color: rgb(0 63 145 / var(--tw-bg-opacity));
 }
 
 .text-color-main{
-    color: #003f91;
+  color: #003f91;
 }
 
 .btn_drop_account:before{
-    content: "";
-    position: absolute;
-    width: 2px;
-    height: 20px;
-    right: 0;
-    background: #000;
-}
-
-
-.sub_drop{
-    width: 75vw;
-    height: 410px;
-}
-
-
-.logo_vendor{
-    height: 124px;
-    overflow: hidden;
-    display: flex;
-    width: 184px;
-    align-items: center;
-    margin: 8px 8px 0 0;
-    border: 1px solid #eee;
-    padding: 15px;
-    float: left;
-}
-
-.logo_vendor a{
-    display: block;
-    height: 100%;
-    text-align: center;
-    width: 100%;
-}
-
-.menu_main ul li{
-    float: left;
-    line-height: 52px;
-}
-
-.menu_main ul li a{
-
-}
-
-.block_menu{
-    visibility: hidden;
-    opacity: 0;
-    transition: visibility 0s, opacity 0.5s linear;
-    height: 427px;
-}
-
-.menu_main ul li:hover >.block_menu{
-    visibility: visible;
-    opacity: 1;
-}
-
-
-.btn_sell:hover{
-    --tw-bg-opacity: 1;
-    background-color: rgb(1 40 100 / var(--tw-bg-opacity));
-}
-
-.slider_main {
-    min-height: 200px;
-    background-color: red; /* For browsers that do not support gradients */
-    background-image: linear-gradient(#F3EDC9, #fff);
-  }
-
-  .item_slider_main{
-        background:#212844
-  }
-
-  .arrow-right-slider span{
-    margin: 0 0 0 -30px;
-    position: absolute;
-    border: 4px solid #fff;
-    background:#F3F9FB;
-  }
-  .arrow-left-slider span{
-    margin: 0 -30px 0 0;
-    position: absolute;
-    border: 4px solid #fff;
-    background:#F3F9FB;
-  }
-
-  .loading-gif {
-    width: 150px;
-}
-
-.pre-loader {
-    position: fixed;
-    z-index: 99999; /** make sure this is the highest value compared to all other divs **/
-    top: 0;
-    left: 0;
-    background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-}
-
-.pre-loader.hidden {
-    animation: fadeOut 2s; /** change to 1s */
-    animation-fill-mode: forwards;
-}
-
-@keyframes fadeOut {
-    100% {
-        opacity: 0;
-        visibility: hidden;
-    }
-}
-
-swiper-container {
-    width: 100%;
-    height: 100%;
-  }
-
-  swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
-  .block_topCategory:hover .img_top_gategory{
-    border:1px solid #000;
-  }
-
-  .block_topCategory {
-    padding-bottom: 10px;
-    width: 100%;
-}
-
-.img_top_gategory{
-    width: 100%;
-    height: 130px;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    border-radius: 100%;
-    background: #eee;
-}
-
-.img_top_gategory img{
-    height: 80%;
-}
-
-.tit-top-gatefory:before{
-    position: absolute;
-    content: "";
-    width: 150px;
-    height: 2px;
-    background: #000;
-    bottom: 0;
-}
-
-.block-gategory-tow a:hover img{
-    opacity:0.75;
+  content: "";
+  position: absolute;
+  width: 2px;
+  height: 20px;
+  right: 0;
+  background: #000;
 }
 
 .shadow-main{
-    box-shadow:0 0 10px #ddd;
-}
-
-.lage-block-building:hover{
-    box-shadow:0 0 10px #aca3a3;
+  box-shadow:0 0 10px #ddd;
 }
 
 
-.icon-cart{
-    transition: visibility 0.50s ease-out, opacity 0.50s ease-out,
-    transform 0.50s ease-out;
-    opacity: 0;
+
+
+.item_slider_main{
+  background: #212844;
+  position: relative;
+  height: 175px;  
 }
 
-.lage-block-building:hover .icon-cart{
-    opacity: 1;
-    transition: visibility 0.50s ease-out, opacity 0.50s ease-out,
-    transform 0.50s ease-out;
+.tit-top-gatefory:before {
+  position: absolute;
+  content: "";
+  width: 150px;
+  height: 2px;
+  background: #000;
+  bottom: 0;
+}
+swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.block_topCategory {
+  padding-bottom: 10px;
+  width: 100%;
+}
+
+.img_top_gategory {
+  width: 100%;
+  height: 95px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  border-radius: 100%;
+  background: #eee;
+}
+.img_top_gategory img {
+  height: 80%;
+  margin: auto;
 }
 
 
 .PrecastConcrete {
-    min-height: 200px;
-    background-color: red; /* For browsers that do not support gradients */
-    background-image: linear-gradient(#060000, #3D72B4);
-  }
-
-  .h-81 {
-    height: 21rem;
-}
-
-.blockwoods:hover{
-    box-shadow:0 0 10px #aca3a3;
-}
-
-.blockwoods:hover .icon-cart{
-    opacity: 1;
-    transition: visibility 0.50s ease-out, opacity 0.50s ease-out,
-    transform 0.50s ease-out;
-}
-
-.h-58{
-    height: 58px;
+  min-height: 200px;
+  background-color: red;
+  background-image: linear-gradient(#060000, #3D72B4);
 }
 
 
-  .sharebtn {
-    
-  }
-  
-  .sharebtn:hover + .sharebtn-dropdown,
-  .sharebtn:focus + .sharebtn-dropdown {
-    display: block;
-  }
-  
-  .sharebtn-dropdown {
-     
-  }
-
-
-  .custom-number-input input[type='number']::-webkit-inner-spin-button,
-  .custom-number-input input[type='number']::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-  }
-
-  .custom-number-input input:focus {
-    outline: none !important;
-  }
-
-  .custom-number-input button:focus {
-    outline: none !important;
-  }
-
-
-
-  /************* style slider view *************/
-
-  
-/* swiper-container {
-    width: 100%;
-    height: 300px;
-    margin-left: auto;
-    margin-right: auto;
-  } */
-
-  swiper-slide {
-    background-size: cover;
-    background-position: center;
-  }
-
-  .mySwiper.sliderView {
-    height: 400px;
-    width: 80%;
-    float: right;
-    border: 1px solid #ddd;
-  }
-
-  .mySwiper2 {
-    height: 400px;
-    box-sizing: border-box;
-    padding: 0;
-    float: left;
-    width: 20%;
-  }
-
-  .mySwiper2 swiper-slide {
-    width: 90%;
-    height: 100%;
-    opacity: 0.4;
-    border: 1px solid #ddd;
-  }
-
-  .mySwiper2 .swiper-slide-thumb-active {
-    opacity: 1;
-  }
-
-  swiper-slide img {
-    display: sw </swiper-slidek;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
-  /* swiper-container {
-    width: 100%;
-    height: 100%;
-  } */
-
-  swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  swiper-slide img {
-    display: sw </swiper-slidek;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
-
-.showmenucat {
-  visibility: visible;
-  opacity: 1;
+.slider_main_view{
+  position: relative;
+  z-index: 0;
 }
 
-@media (min-width: 1200px) {
-    .container {
-      max-width: 1200px;
-    }
-  }
 
+/*********** menu mobile **********/
 
-
-#overlay-bg{
-  height: 100vh;
-  width: 100%;
-  background: rgb(0 0 0 / 40%);
-  position: fixed;
-  z-index: 99;
+.dropdown {
+  position: relative;
+}
+.dropdown a {
+  text-decoration: none;
+}
+.dropdown [data-toggle="dropdown"] {
+  display: block;
+  color: black;
+  border-top: 1px solid #ddd;
+  padding: 10px 15px;
+}
+.dropdown [data-toggle="dropdown"]:hover {
+  background: #cd3d2e;
+}
+.dropdown [data-toggle="dropdown"]:before {
+  position: absolute;
+  display: block;
+  content: "\25BC";
+  font-size: 0.7em;
+  color: #000;
+  top: 13px;
+  right: 15px;
+  -moz-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  -webkit-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -moz-transition: -moz-transform 0.6s;
+  -o-transition: -o-transform 0.6s;
+  -webkit-transition: -webkit-transform 0.6s;
+  transition: transform 0.6s;
+}
+.dropdown > .dropdown-menu {
+  max-height: 0;
+  overflow: hidden;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  -moz-transform: scaleY(0);
+  -ms-transform: scaleY(0);
+  -webkit-transform: scaleY(0);
+  transform: scaleY(0);
+  -moz-transform-origin: 50% 0%;
+  -ms-transform-origin: 50% 0%;
+  -webkit-transform-origin: 50% 0%;
+  transform-origin: 50% 0%;
+  -moz-transition: max-height 0.6s ease-out;
+  -o-transition: max-height 0.6s ease-out;
+  -webkit-transition: max-height 0.6s ease-out;
+  transition: max-height 0.6s ease-out;
+  animation: hideAnimation 0.4s ease-out;
+  -moz-animation: hideAnimation 0.4s ease-out;
+  -webkit-animation: hideAnimation 0.4s ease-out;
+}
+.dropdown > .dropdown-menu li {
+  padding: 0;
+}
+.dropdown > .dropdown-menu li a {
+  display: block;
+  color: #6f6f6f;
+  background: #eee;
+  -moz-box-shadow: 0 1px 0 white inset, 0 -1px 0 #d5d5d5 inset;
+  -webkit-box-shadow: 0 1px 0 white inset, 0 -1px 0 #d5d5d5 inset;
+  box-shadow: 0 1px 0 white inset, 0 -1px 0 #d5d5d5 inset;
+  text-shadow: 0 -1px 0 rgba(255, 255, 255, 0.3);
+  padding: 10px 10px;
+}
+.dropdown > .dropdown-menu li a:hover {
+  background: #f6f6f6;
+}
+.dropdown > input[type="checkbox"] {
+  opacity: 0;
+  display: block;
+  position: absolute;
   top: 0;
-  
-}  
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+.dropdown > input[type="checkbox"]:checked ~ .dropdown-menu {
+  max-height: 9999px;
+  display: block;
+  -moz-transform: scaleY(1);
+  -ms-transform: scaleY(1);
+  -webkit-transform: scaleY(1);
+  transform: scaleY(1);
+  animation: showAnimation 0.5s ease-in-out;
+  -moz-animation: showAnimation 0.5s ease-in-out;
+  -webkit-animation: showAnimation 0.5s ease-in-out;
+  -moz-transition: max-height 2s ease-in-out;
+  -o-transition: max-height 2s ease-in-out;
+  -webkit-transition: max-height 2s ease-in-out;
+  transition: max-height 2s ease-in-out;
+}
+.dropdown > input[type="checkbox"]:checked + a[data-toggle="dropdown"]:before {
+  -moz-transform: rotate(-180deg);
+  -ms-transform: rotate(-180deg);
+  -webkit-transform: rotate(-180deg);
+  transform: rotate(-180deg);
+  -moz-transition: -moz-transform 0.6s;
+  -o-transition: -o-transform 0.6s;
+  -webkit-transition: -webkit-transform 0.6s;
+  transition: transform 0.6s;
+}
+
+@keyframes showAnimation {
+  0% {
+    -moz-transform: scaleY(0.1);
+    -ms-transform: scaleY(0.1);
+    -webkit-transform: scaleY(0.1);
+    transform: scaleY(0.1);
+  }
+  40% {
+    -moz-transform: scaleY(1.04);
+    -ms-transform: scaleY(1.04);
+    -webkit-transform: scaleY(1.04);
+    transform: scaleY(1.04);
+  }
+  60% {
+    -moz-transform: scaleY(0.98);
+    -ms-transform: scaleY(0.98);
+    -webkit-transform: scaleY(0.98);
+    transform: scaleY(0.98);
+  }
+  80% {
+    -moz-transform: scaleY(1.04);
+    -ms-transform: scaleY(1.04);
+    -webkit-transform: scaleY(1.04);
+    transform: scaleY(1.04);
+  }
+  100% {
+    -moz-transform: scaleY(0.98);
+    -ms-transform: scaleY(0.98);
+    -webkit-transform: scaleY(0.98);
+    transform: scaleY(0.98);
+  }
+  80% {
+    -moz-transform: scaleY(1.02);
+    -ms-transform: scaleY(1.02);
+    -webkit-transform: scaleY(1.02);
+    transform: scaleY(1.02);
+  }
+  100% {
+    -moz-transform: scaleY(1);
+    -ms-transform: scaleY(1);
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+}
+@-moz-keyframes showAnimation {
+  0% {
+    -moz-transform: scaleY(0.1);
+    -ms-transform: scaleY(0.1);
+    -webkit-transform: scaleY(0.1);
+    transform: scaleY(0.1);
+  }
+  40% {
+    -moz-transform: scaleY(1.04);
+    -ms-transform: scaleY(1.04);
+    -webkit-transform: scaleY(1.04);
+    transform: scaleY(1.04);
+  }
+  60% {
+    -moz-transform: scaleY(0.98);
+    -ms-transform: scaleY(0.98);
+    -webkit-transform: scaleY(0.98);
+    transform: scaleY(0.98);
+  }
+  80% {
+    -moz-transform: scaleY(1.04);
+    -ms-transform: scaleY(1.04);
+    -webkit-transform: scaleY(1.04);
+    transform: scaleY(1.04);
+  }
+  100% {
+    -moz-transform: scaleY(0.98);
+    -ms-transform: scaleY(0.98);
+    -webkit-transform: scaleY(0.98);
+    transform: scaleY(0.98);
+  }
+  80% {
+    -moz-transform: scaleY(1.02);
+    -ms-transform: scaleY(1.02);
+    -webkit-transform: scaleY(1.02);
+    transform: scaleY(1.02);
+  }
+  100% {
+    -moz-transform: scaleY(1);
+    -ms-transform: scaleY(1);
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+}
+@-webkit-keyframes showAnimation {
+  0% {
+    -moz-transform: scaleY(0.1);
+    -ms-transform: scaleY(0.1);
+    -webkit-transform: scaleY(0.1);
+    transform: scaleY(0.1);
+  }
+  40% {
+    -moz-transform: scaleY(1.04);
+    -ms-transform: scaleY(1.04);
+    -webkit-transform: scaleY(1.04);
+    transform: scaleY(1.04);
+  }
+  60% {
+    -moz-transform: scaleY(0.98);
+    -ms-transform: scaleY(0.98);
+    -webkit-transform: scaleY(0.98);
+    transform: scaleY(0.98);
+  }
+  80% {
+    -moz-transform: scaleY(1.04);
+    -ms-transform: scaleY(1.04);
+    -webkit-transform: scaleY(1.04);
+    transform: scaleY(1.04);
+  }
+  100% {
+    -moz-transform: scaleY(0.98);
+    -ms-transform: scaleY(0.98);
+    -webkit-transform: scaleY(0.98);
+    transform: scaleY(0.98);
+  }
+  80% {
+    -moz-transform: scaleY(1.02);
+    -ms-transform: scaleY(1.02);
+    -webkit-transform: scaleY(1.02);
+    transform: scaleY(1.02);
+  }
+  100% {
+    -moz-transform: scaleY(1);
+    -ms-transform: scaleY(1);
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+}
+@keyframes hideAnimation {
+  0% {
+    -moz-transform: scaleY(1);
+    -ms-transform: scaleY(1);
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+  60% {
+    -moz-transform: scaleY(0.98);
+    -ms-transform: scaleY(0.98);
+    -webkit-transform: scaleY(0.98);
+    transform: scaleY(0.98);
+  }
+  80% {
+    -moz-transform: scaleY(1.02);
+    -ms-transform: scaleY(1.02);
+    -webkit-transform: scaleY(1.02);
+    transform: scaleY(1.02);
+  }
+  100% {
+    -moz-transform: scaleY(0);
+    -ms-transform: scaleY(0);
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0);
+  }
+}
+@-moz-keyframes hideAnimation {
+  0% {
+    -moz-transform: scaleY(1);
+    -ms-transform: scaleY(1);
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+  60% {
+    -moz-transform: scaleY(0.98);
+    -ms-transform: scaleY(0.98);
+    -webkit-transform: scaleY(0.98);
+    transform: scaleY(0.98);
+  }
+  80% {
+    -moz-transform: scaleY(1.02);
+    -ms-transform: scaleY(1.02);
+    -webkit-transform: scaleY(1.02);
+    transform: scaleY(1.02);
+  }
+  100% {
+    -moz-transform: scaleY(0);
+    -ms-transform: scaleY(0);
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0);
+  }
+}
+@-webkit-keyframes hideAnimation {
+  0% {
+    -moz-transform: scaleY(1);
+    -ms-transform: scaleY(1);
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+  60% {
+    -moz-transform: scaleY(0.98);
+    -ms-transform: scaleY(0.98);
+    -webkit-transform: scaleY(0.98);
+    transform: scaleY(0.98);
+  }
+  80% {
+    -moz-transform: scaleY(1.02);
+    -ms-transform: scaleY(1.02);
+    -webkit-transform: scaleY(1.02);
+    transform: scaleY(1.02);
+  }
+  100% {
+    -moz-transform: scaleY(0);
+    -ms-transform: scaleY(0);
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0);
+  }
+}
+
+
+.peer:checked ~ .peer-checked\:after\:translate-x-full::after {
+  width: 49%;
+}
+.after\:bg-white\/40::after {
+  width: 50%;
+}
+
+
 
 .box--search{
   position: absolute;
   z-index: 99999999;
   background: #fff;
-  border-radius: 0 5px 10px 10px;
+  border-radius: 5px;
   height: 250px;
-  width: 92%;
   right: 0;
+  left: 0;
   padding: 15px;
-  top: 47px;
+  top: 55px;
   overflow-y: scroll;
+  border: 1px solid #ddd;
 }
 
 .box--search a{
   display: block;
-  font-size: 14px;
+  font-size: 12px;
   border-bottom: 1px solid #ddd;
   padding: 0 0 5px 0;
   margin: 0 0 5px 0;
 }
 .box--search a:hover{
   color:blue;
+}
+
+#overlay-bg{
+  height: 100vh;
+  width: 100%;
+  background: rgb(0 0 0 / 40%);
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  
+}
+
+.search--popup{
+  position:relative;
+  z-index:9;
 }
