--- a/output.css
+++ b/output.css
@@ -717,6 +717,10 @@ video {
   top: 1.5rem;
 }
 
+.top-24 {
+  top: 6rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -739,10 +743,6 @@ video {
 
 .z-\[0\] {
   z-index: 0;
-}
-
-.z-auto {
-  z-index: auto;
 }
 
 .col-span-1 {
@@ -846,6 +846,11 @@ video {
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .-mb-8 {
@@ -960,12 +965,12 @@ video {
   margin-top: 1.75rem;
 }
 
-.block {
-  display: block;
-}
-
 .\!block {
   display: block !important;
+}
+
+.block {
+  display: block;
 }
 
 .inline-block {
@@ -1066,6 +1071,14 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-52 {
+  height: 13rem;
+}
+
+.h-44 {
+  height: 11rem;
 }
 
 .min-h-full {
@@ -1405,6 +1418,10 @@ video {
   border-radius: 0.125rem;
 }
 
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
 .rounded-l-full {
   border-top-left-radius: 9999px;
   border-bottom-left-radius: 9999px;
@@ -1720,6 +1737,10 @@ video {
 
 .pt-3 {
   padding-top: 0.75rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .text-left {
